# auto-format

./: CHANGES.md  COPYING.HEADER  README.md  auto-format-dev.opam  auto-format-example.opam  auto-format-tests.opam  auto-format.opam  dune-project  dunolint  index.html
.github/workflows/: ci.yml  dune-pkg-more-ci.yml  more-ci.yml
auto-format/: db.js  index.html
auto-format-tests/: db.js  index.html
auto-format-tests/Auto_format_test/: index.html
auto-format/Auto_format/: index.html
auto-format/Auto_format/Config/: index.html
auto-format/Auto_format/Config/module-type-S/: index.html
auto-format/Auto_format/module-type-T/: index.html
auto-format/Auto_format/module-type-T_pp/: index.html
example/: README.md
example/src/: config.ml  config.mli  config_parser.ml  config_parser.mli  config_pp.ml  config_pp.mli  dune  lexer.mli  lexer.mll  parser.mly
example/test/: comments.myconf  dune  dune.myconf.inc  run.t  simple.myconf
src/: auto_format.ml  auto_format.mli  dune
src/stdlib/: array0.ml  array0.mli  auto_format_stdlib.ml  auto_format_stdlib.mli  code_error.ml  code_error0.mli  dune  dyn0.ml  dyn0.mli  err0.ml  err0.mli  list0.ml  list0.mli  pp0.ml  pp0.mli  ref0.ml  ref0.mli  result0.ml  result0.mli  stdlib0.ml  stdlib0.mli  string0.ml  string0.mli
test/: dune  test__auto_format.ml  test__auto_format.mli
test/stdlib/: dune  test__pp.ml  test__pp.mli
