(library
 (name auto_format)
 (public_name auto-format)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_extended)
 (libraries
  base
  eio
  eio-writer
  eio_main
  fpath
  fpath-extended
  parsing-utils
  pp
  pp-extended)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
