(library
 (name auto_format)
 (public_name auto-format)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_extended)
 (libraries
  base
  eio
  eio-writer
  eio_main
  fpath
  fpath-extended
  parsing-utils
  pp
  pp-extended)
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value
   ppx_js_style
   -check-doc-comments)))
