(library
 (name auto_format)
 (public_name auto-format)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_sexp0
  -open
  Pplumbing_log_cli
  -open
  Cmdlang
  -open
  Auto_format_stdlib)
 (libraries
  auto_format_stdlib
  cmdlang
  fpath
  fpath-sexp0
  loc
  parsing-utils
  pplumbing-log-cli
  sexplib0)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
