(library
 (name auto_format_test)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base)
 (libraries
  auto_format
  base
  expect_test_helpers_core.expect_test_helpers_base)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
