(library
 (name auto_format_test)
 (package auto-format-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Auto_format_stdlib)
 (libraries auto_format_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
