(library
 (name auto_format_stdlib)
 (public_name auto-format.stdlib)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Pplumbing_err)
 (libraries dyn ordering pp pplumbing-err)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
